<resources>
    <string name="app_name" translatable="false">SelfHealth</string>

    <string name="title" translatable="false">SELFHEALTH</string>

    <string name="my_today_status">我今日狀態</string>

    <string name="today_step_string">今日步數</string>
    <string name="yesterday_sleep_string">昨日睡眠</string>
    <string name="today_drink_string">今天飲水</string>
    <string name="today_use_phone_string">今日滑手機</string>

    <string name="hour_string">小時</string>
    <string name="minute_string">分鐘</string>
    <string name="cc_string">毫升</string>
    <string name="zero_string">0</string>
    <string name="step_string">步</string>
    <string name="share_string">分享</string>

    <string name="version_string">v1.0</string>

    <string name="export_string">匯出</string>
    <string name="import_string">匯入</string>
    <string name="import_export_string">匯入/匯出</string>


    <string name="file_name_string">檔案名稱</string>
    <string name="settings">設定</string>
    <string name="add">新增</string>

    <string name="step">步數</string>
    <string name="sleep">睡眠</string>
    <string name="drink">飲水</string>
    <string name="phone_use">滑手機</string>
    <string name="confirm">確認</string>
    <string name="show_notification">顯示通知</string>
    <string name="notification_setting">顯示設定</string>
    <string name="hide_notification">不顯示通知</string>
    <string name="daily_steps_goal">每日步數目標</string>
    <string name="daily_sleep_goal">每日睡眠目標</string>
    <string name="daily_water_goal">每日飲水目標</string>
    <string name="daily_phone_use_goal">每日手機使用上限</string>
    <string name="clear_data">清理資料</string>
    <string name="clear_data_detail">清理設定和健康資料</string>
    <string name="enter_goal_value">輸入目標值</string>
    <string name="enter_limit_value">輸入上限值</string>
    <string name="average">平均</string>
    <string name="total">總和</string>
    <string name="goal">每日目標</string>
    <string name="limit">每日上限</string>

    <string name="connect_google_fit">綁定google fit</string>
    <string name="connected_google_fit">已綁定</string>
    <string name="disconnected_google_fit">未綁定</string>
    <string name="height">身高</string>
    <string name="weight">體重</string>


</resources>
